updates to notebooks

--- a/notebooks/acceptors_and_transducers.ipynb
+++ b/notebooks/acceptors_and_transducers.ipynb
@@ -54,7 +54,7 @@
    "source": [
     "## Automata\n",
     "\n",
-    "The broad class of graphs we are going to look at are finite-state automata. These include deterministic finite-state automata (DFAs) and non-deterministic finite-state automata (NFAs). More specifically we will consider a generalization of DFAs and NFAs called weighted finite-state acceptors (WFSAs). That's a mouthful, so we will just call them *acceptors*. We will also consider a further generalization of an acceptor called a *transducer* (weighted finite-state transducers or WFSTs). The following figure shows the relation between these three graphs; transducers, acceptors, and automtata. Transducers are the most expressive in terms of their representational power, followed by acceptors followed by unweighted automata.\n",
+    "The broad class of graphs we are going to look at are finite-state automata. These include deterministic finite-state automata (DFAs) and non-deterministic finite-state automata (NFAs). More specifically we will consider a generalization of DFAs and NFAs called weighted finite-state acceptors (WFSAs). That's a mouthful, so I will just call them *acceptors*. We will also consider a further generalization of an acceptor called a *transducer* (weighted finite-state transducers or WFSTs). The following figure shows the relation between these three graphs; transducers, acceptors, and automtata. Transducers are the most expressive in terms of their representational power, followed by acceptors followed by unweighted automata.\n",
     "\n",
     "\n",
     "<div class=\"figure\">\n",
@@ -66,7 +66,7 @@
     "  </div>\n",
     "</div>\n",
     "\n",
-    "Before we dive into acceptors and transducers, let's introduce some general graph terminology that we will use throughout. In the following graph a *state* or *node* is represented by a circle. The arrows represent connections between two states. We usually refer to these as *arcs* but sometimes also *edges*. The graph is directed since the connections between states are unidirectional arrows. The arcs in a graph can have labels. In the graph below the arc between states $0$ and $1$ has a label of $a$. Similarly, the arc between states $1$ and $2$ has a label of $b$. The graph is an example of a finite-state automata (FSA) or finite-state machine (FSM), so called because it has a finite number of nodes. \n",
+    "Before we dive into acceptors and transducers, let's introduce some general graph terminology that I will use throughout. In the following graph a *state* or *node* is represented by a circle. The arrows represent connections between two states. We usually refer to these as *arcs* but sometimes also *edges*. The graph is directed since the connections between states are unidirectional arrows. The arcs in a graph can have labels. In the graph below the arc between states $0$ and $1$ has a label of $a$. Similarly, the arc between states $1$ and $2$ has a label of $b$. The graph is an example of a finite-state automata (FSA) or finite-state machine (FSM), so called because it has a finite number of nodes. \n",
     "\n",
     "<div class=\"figure\">\n",
     "  <div class=\"img\">\n",
@@ -77,7 +77,7 @@
     "  </div>\n",
     "</div>\n",
     "\n",
-    "An automata is deterministic if for each state and label pair there is only one outgoing transition which matches that label. An automata is nondeterministic if multiple transitions leaving a state have the same label. The graphs below show an example of a deterministic and a nondeterministic automata. In general, we will allow acceptors and transducers to be nondeterministic.\n",
+    "An automata is deterministic if for each state and label pair there is only one outgoing transition which matches that label. An automata is nondeterministic if multiple transitions leaving a state have the same label. The graphs below show an example of a deterministic and a nondeterministic automata. In general, acceptors and transducers to can be nondeterministic.\n",
     "\n",
     "<div class=\"figure\">\n",
     "  <div class=\"img\">\n",
@@ -99,7 +99,7 @@
    "source": [
     "## Acceptors\n",
     "\n",
-    "We'll start by constructing some very basic automata to get a feel for their various properties."
+    "Let's start by constructing some very basic automata to get a feel for their various properties."
    ]
   },
   {
@@ -147,7 +147,7 @@
     "![simple fsa](figures/nb/simple_fsa.svg)\n",
     "\n",
     "\n",
-    "An accepting path in the graph is a sequence of arcs which begin at a start state and end in an accepting state. By concatenating the labels on an accepting path, we get a string which is accepted by the graph. So the string $aa$ is accepted by the graph by following the state sequence $0 \\rightarrow 2 \\rightarrow 1$. The string $ba$ is also accepted by the graph by following the same state sequence but taking the arc with label $b$ when traversing from state $0$ to state $1$. The language of the acceptor is the set of all strings which are accepted by it. You may also encounter \"recognized\" used as a synonym for \"accepted\". Let the variable $A$ represent the above acceptor. We use $\\mathcal{L}(A)$ to denote the langauge of $A$. In this case $\\mathcal{L}(A) = \\{aa, ba\\}$. \n",
+    "An accepting path in the graph is a sequence of arcs which begin at a start state and end in an accepting state. By concatenating the labels on an accepting path, we get a string which is accepted by the graph. So the string $aa$ is accepted by the graph by following the state sequence $0 \\rightarrow 2 \\rightarrow 1$. The string $ba$ is also accepted by the graph by following the same state sequence but taking the arc with label $b$ when traversing from state $0$ to state $1$. The language of the acceptor is the set of all strings which are accepted by it. You may also encounter \"recognized\" used as a synonym for \"accepted\". Let the variable $\\mathcal{A}$ represent the above acceptor. In general, I'll use upercase script letters to represent graphs. Let $\\mathcal{L}(\\mathcal{A})$ denote the langauge of $\\mathcal{A}$. In this case $\\mathcal{L}(\\mathcal{A}) = \\{aa, ba\\}$. \n",
     "\n",
     "There are different ways to compute the weight of a string accepted by the graph. The most common is to sum the weights of the arcs on the accepting path for that string. For example the string $aa$ in the above graph has a weight of $0 + 2 = 2$. Another option would be to multiply the weights. These two options correspond to interpreting the weights as either log probabilities or probabilities. We'll have more to say about this later."
    ]
