--- a/notebooks/extended_examples.ipynb
+++ b/notebooks/extended_examples.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "8e1fbd0d",
    "metadata": {},
    "outputs": [
@@ -43,8 +43,9 @@
    ],
    "source": [
     "import gtn\n",
-    "import nb_utils\n",
     "import math\n",
+    "import numpy as np\n",
+    "import nb_utils\n",
     "nb_utils.init()"
    ]
   },
@@ -461,49 +462,54 @@
     "---\n",
     "\n",
     "## Automatic Segmentation Criterion\n",
-    "$\\newcommand{\\bX}{{\\bf X}}\n",
-    "\\newcommand{\\by}{{\\bf y}}\n",
-    "\\newcommand{\\bx}{{\\bf x}}\n",
-    "\\newcommand{\\ba}{{\\bf a}}\n",
-    "\\newcommand{\\bp}{{\\bf p}}\n",
+    "$\\newcommand{\\mX}{{\\bf X}}\n",
+    "\\newcommand{\\va}{{\\bf a}}\n",
+    "\\newcommand{\\vx}{{\\bf x}}\n",
+    "\\newcommand{\\vy}{{\\bf y}}\n",
+    "\\newcommand{\\gA}{\\mathcal{A}}\n",
+    "\\newcommand{\\gE}{\\mathcal{E}}\n",
+    "\\newcommand{\\gZ}{\\mathcal{Z}}\n",
     "$\n",
     "In speech recognition and other problems, we often need to compute a conditional probability of an output sequence given an input sequence when the two sequences do not have the same length. The Automatic Segmentation criterion (ASG) is one of several common loss functions for which this is possible. However, ASG is limited to the case when the output sequence is no longer than the input sequence. \n",
     "\n",
-    "Assume we have an input sequence of vectors $\\bX = [\\bx_1, \\ldots, \\bx_T]$ of length $T$ and an output token sequence $\\by = [y_1, \\ldots, y_U]$ of length $U$ such that $U \\le T$. We don't know the actual alignment between $\\by$ and $\\bX$ and in most applications, including speech recognition, we don't need it. To get around not knowing this alignment, the ASG criterion marginalizing over all possible alignments between $\\bX$ and $\\by$.\n",
+    "Assume we have an input sequence of vectors $\\mX = [\\vx_1, \\ldots, \\vx_T]$ of length $T$ and an output token sequence $\\vy = [y_1, \\ldots, y_U]$ of length $U$ such that $U \\le T$. We don't know the actual alignment between $\\mX$ and $\\vy$ and in most applications, including speech recognition, we don't need it. To get around not knowing this alignment, the ASG criterion marginalizes over all possible alignments between $\\mX$ and $\\vy$.\n",
     "\n",
-    "In ASG, the output sequence is aligned to a given input, by allowing one or more consecutive repeats of each token in the output. Let's look at an example. Suppose we have an input of length $5$ and the output sequence $ab$. Some possible alignments of the output are $aaabb$, $abbbb$, and $aaaab$. Some invalid alignmets are $abbbba$, $aaab$, and $aaaaa$. The first corresponds to the output $aba$, the second is too short, and the third corresponds to the output $a$.\n",
+    "In ASG, the output sequence is aligned to a given input, by allowing one or more consecutive repeats of each token in the output. Let's look at an example. Suppose we have an input of length $5$ and the output sequence $ab$. Some possible alignments of the output are $aaabb$, $abbbb$, and $aaaab$. Some invalid alignmets are $abbbba$, $aaab$, and $aaaaa$. These are invalid because first corresponds to the output $aba$, the second is too short, and the third corresponds to the output $a$.\n",
     "\n",
-    "For each time-step of the input, our model assigns a score for every possible output token. Let $\\ba = [a_1, \\ldots, a_T]$ be one possible aligment between $\\bX$ and $\\by$. The alignment $\\ba$ also has length $T$. To compute a score for $\\ba$ sum the sequence of scores for each token:\n",
-    "\n",
-    "$$\n",
-    "s(\\ba) = \\sum_{t=1}^T s_t(a_t)\n",
-    "$$\n",
-    "\n",
-    "Let $\\mathcal{A}_{\\bX,\\by}$ denote the set of all possible alignments between $\\bX$ and $\\by$. We can then use the individual alignment scores to compute a conditional probability of the output $\\by$ given the input $\\bX$:\n",
+    "For each time-step of the input, we have a model $s_t(y)$ which assigns a score for every possible output token $y$. Let $\\va = [a_1, \\ldots, a_T]$ be one possible aligment between $\\mX$ and $\\vy$. The alignment $\\va$ also has length $T$. To compute a score for $\\va$, we sum the sequence of scores for each token:\n",
     "\n",
     "$$\n",
-    "\\log p(\\by \\mid \\bX) = \\sum_{\\ba \\in \\mathcal{A}_{\\bX, \\by}} e^{s(\\ba)} - \\log Z\n",
+    "s(\\va) = \\sum_{t=1}^T s_t(a_t)\n",
     "$$\n",
     "\n",
-    "where $Z$ is a normalization term:\n",
+    "Let $\\gA_{\\mX,\\vy}$ denote the set of all possible alignments between $\\mX$ and $\\vy$. We can then use the individual alignment scores to compute a conditional probability of the output $\\vy$ given the input $\\mX$:\n",
     "\n",
     "$$\n",
-    "Z = \\sum_{\\bp \\in \\mathcal{Z}_\\bX} e^{s(\\bp)}\n",
+    "\\log p(\\vy \\mid \\mX) = \\sum_{\\va \\in \\gA_{\\mX, \\vy}} e^{s(\\va)} - \\log Z.\n",
     "$$\n",
     "\n",
-    "where $\\mathcal{A}_\\bX$ is the set of all possible alignments of the same length as $X$. Computing the summations over $\\mathcal{A}_{\\bX,\\by}$ and $\\mathcal{Z}_\\bX$ explicitly is not tractable because the sizes of these sets grow rapidly with the lengths of $\\bX$ and $\\by$. We will instead use automata to encode these sets and efficiently compute the summation using the forward score algorithm.\n",
+    "The normalization term $Z$ is given by:\n",
     "\n",
-    "Let's start with the normalization term $Z$. The set $\\mathcal{Z}_\\bX$ just encodes all possible outputs of length $T$, where $T$ is the length of $\\bX$. Assuming $T=4$ and we have three possible output tokens. If the scores for each otuput are independent, we can represent $\\mathcal{Z}_\\bX$ with the graph below. Each output token at each step is given a score by the model. These scores are often called the *emissions* and the graph itself is sometimes called the emissions graph. We'll use $\\mathcal{E}$ to represent the emissions graph. In this case the emissions graph $\\mathcal{E}$ is the same as the normalizaation graph $\\mathcal{Z}_\\bX$; however, in general they may be different. The normalization term is the forward score of the emissions graph, $Z = \\LSE(\\mathcal{E})$."
+    "$$\n",
+    "Z = \\sum_{\\va \\in \\gZ_\\mX} e^{s(\\va)}\n",
+    "$$\n",
+    "\n",
+    "where $\\gZ_\\mX$ is the set of all possible length $T$ alignments (the same length as $X$). Computing the summations over $\\gA_{\\mX,\\vy}$ and $\\gZ_\\mX$ explicitly is not tractable because the sizes of these sets grow rapidly with the lengths of $\\mX$ and $\\vy$. We will instead use automata to encode these sets and efficiently compute the summation using the forward score operation.\n",
+    "\n",
+    "Let's start with the normalization term $Z$. The set $\\gZ_\\mX$ just encodes all possible outputs of length $T$, where $T$ is the length of $\\mX$. As an example, assume $T=4$ and we have three possible output tokens $\\{a, b, c\\}$. If the scores for each otuput are independent, we can represent $\\gZ_\\mX$ with the graph below. The scores on the arcs are given by the model $s_t(y)$. These scores are often called the *emissions*, and the graph itself is sometimes called the emissions graph. We'll use $\\gE$ to represent the emissions graph. In this case the emissions graph $\\gE$ is the same as the normalization graph $\\gZ_\\mX$; however, in general they may be different. The normalization term is the forward score of the emissions graph, $Z = \\LSE(\\gE)$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "a14f710e",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Construct the eemisisons graph with\n",
+    "# randomly sampled emissions scores, s_t(y):\n",
     "E = gtn.linear_graph(4, 3)\n",
+    "E.set_weights(np.random.randn(4*3).round(decimals=1))\n",
     "gtn.draw(E, \"figures/nb/asg_emissions.svg\", isymbols=symbols)"
    ]
   },
@@ -517,17 +523,11 @@
     "    <img src=\"figures/nb/asg_emissions.svg\"/>\n",
     "  </div>\n",
     "  <div class=\"caption\" markdown=\"span\">\n",
-    "    TODO\n",
+    "    An emissions graph $\\gE$ with $T=4$ time-steps and a token set of $\\{a, b, c\\}$.\n",
     "  </div>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c6b41568",
-   "metadata": {},
-   "source": [
-    "Let's turn to the set $\\mathcal{A}_{\\bX, \\by}$ which we will also represent as an acceptor. This acceptor should have a path for every possible alignment between $\\bX$ and $\\by$. We'll construct $\\mathcal{A}_{\\bX, \\by}$ in two steps. First, we can encode the set of allowed alignment of arbitrary length for a given sequence $\\by$ using a graph. For example, for the sequence $ab$ the graph is shown below."
+    "</div>\n",
+    "\n",
+    "Let's turn to the set $\\gA_{\\mX, \\vy}$ which we will also represent as an acceptor. This acceptor should have a path for every possible alignment between $\\bX$ and $\\vy$. We'll construct $\\gA_{\\mX, \\vy}$ in two steps. First, we can encode the set of allowed alignments of arbitrary length for a given sequence $\\vy$ with a graph, $\\gA_\\vy$. For example, for the sequence $ab$ the graph $\\gA_\\vy$ is shown below."
    ]
   },
   {
@@ -558,11 +558,11 @@
     "    <img src=\"figures/nb/asg_alignments.svg\"/>\n",
     "  </div>\n",
     "  <div class=\"caption\" markdown=\"span\">\n",
-    "    TODO\n",
+    "    The ASG alignment graph $\\gA_\\vy$ for the sequence $ab$. The graph encodes the fact that each output token can repeat one or more times in an arbitrary length alignment.\n",
     "  </div>\n",
     "</div>\n",
     "\n",
-    "This graph has a simple interpretation. Each token in the output $ab$ can repeat one or more times in the alignment. We'll use the symbol $\\mathcal{A}\\by$ to represent this graph as it is only dependent on $\\by$ and not $\\bX$. We can then construct $\\mathcal{A}_{\\bX,\\by}$ by intersecting $\\mathcal{A}_\\by$ with the graph containing all possible sequences of length $T$. The latter graph is precisely the emissions graph $\\mathcal{E}$ we constructed above, so the $\\mathcal{A}_{\\bX,\\by} = \\mathcal{A}_\\by \\circ \\mathcal{E}$. An example graph is shown below for the sequence $ab$ with $T=4$."
+    "This graph has a simple interpretation. Each token in the output $ab$ can repeat one or more times in the alignment. We can then construct $\\gA_{\\mX,\\vy}$ by intersecting $\\gA_\\vy$ with the emissions graph $\\gE$ which represents all possible sequences of length $T$. This gives $\\gA_{\\mX,\\vy} = \\gA_\\vy \\circ \\gA$. An example of $\\gA_{\\mX, \\vy}$ is shown below for the sequence $ab$ with $T=4$."
    ]
   },
   {
@@ -590,10 +590,10 @@
     "  </div>\n",
     "</div>\n",
     "\n",
-    "In terms of graph operations, we can then write the ASG loss function as:\n",
+    "In terms of graph operations, we can write the ASG criterion as:\n",
     "\n",
     "$$\n",
-    "p(\\by \\mid \\bX) = \\LSE(\\mathcal{A}_{\\by} \\circ \\mathcal{E}) - \\LSE(\\mathcal{E})\n",
+    "p(\\vy \\mid \\mX) = \\LSE(\\gA_\\vy \\circ \\gE) - \\LSE(\\gE)\n",
     "$$\n",
     "\n",
     "### Transitions\n",
@@ -601,7 +601,7 @@
     "The original ASG loss function also includes bigram transition scores. If we let $h(a_{t-1}, a_t)$ denote the transition function, then we can incorporate the transition score into the score of the alignment:\n",
     "\n",
     "$$\n",
-    "s(\\ba) = \\sum_{t=1}^T s_t(a_t) + h(a_t, a_{t-1})\n",
+    "s(\\va) = \\sum_{t=1}^T s_t(a_t) + h(a_t, a_{t-1})\n",
     "$$\n",
     "\n",
     "where we assume $a_0$ is a special start of sequence token $\\textrm{<s>}$. We can use the alignment scores in the same manner as above and the rest of the loss function remains unchanged. \n",
