more math commands

--- a/math_commands.tex
+++ b/math_commands.tex
@@ -1,14 +1,25 @@
+%% log-sum-exp
 \DeclareMathOperator*{\LSE}{\textrm{LSE}}
 
-\newcommand{\gA}{\mathcal{A}}
-\newcommand{\gB}{\mathcal{B}}
-\newcommand{\gC}{\mathcal{C}}
+%% Matrices
+\newcommand{\mA}{{\bf A}}
+\newcommand{\mB}{{\bf B}}
+\newcommand{\mC}{{\bf C}}
 
+%% Vectors
 \newcommand{\vr}{{\bf r}}
 \newcommand{\vu}{{\bf u}}
 \newcommand{\vv}{{\bf v}}
 
+%% Graphs
+\newcommand{\gA}{\mathcal{A}}
+\newcommand{\gB}{\mathcal{B}}
+\newcommand{\gC}{\mathcal{C}}
+\newcommand{\gE}{\mathcal{E}}
+\newcommand{\gT}{\mathcal{T}}
+\newcommand{\gY}{\mathcal{Y}}
+\newcommand{\gZ}{\mathcal{Z}}
 
-\newcommand{\mA}{{\bf A}}
-\newcommand{\mB}{{\bf B}}
-\newcommand{\mC}{{\bf C}}
+%% <s> and </s> tokens
+\newcommand{\sos}{\textrm{<s>}}
+\newcommand{\eos}{\textrm{</s>}}
